# aurora-switch

./: CMakeLists.txt
cmake/: AuroraDawnProvider.cmake  AuroraSDL3Provider.cmake  aurora_core.cmake  aurora_dvd.cmake  aurora_gx.cmake  aurora_pad.cmake  aurora_si.cmake
examples/: CMakeLists.txt  simple.c
include/: imgui.h
include/SDL3/: SDL.h
include/aurora/: aurora.h  dvd.h
include/dolphin/: pad.h
include/misc/cpp/: imgui_stdlib.h
lib/: aurora.cpp  imgui.hpp  input.hpp  input_switch.cpp  main.cpp  rmlui.cpp  switch_aurora_stubs.cpp  window.cpp  window.hpp  window_switch.cpp
lib/card/: CardGciFolder.cpp  DolphinCardPath.cpp
lib/dawn/: BackendBinding.cpp
lib/dolphin/: card.cpp  card_switch.cpp
lib/dolphin/dvd/: dvd.cpp  dvd_switch.cpp
lib/dolphin/pad/: pad_switch.cpp
lib/dolphin/si/: si.cpp
lib/gfx/: common.cpp  pipeline_cache.cpp  pipeline_cache_memory.cpp
lib/gx/: gx.cpp
lib/rmlui/: RmlUi_Backend_Aurora.cpp  SystemInterface_Aurora.cpp  SystemInterface_Aurora.h  WebGPURenderInterface.cpp  WebGPURenderInterface.hpp
lib/switch/tracy_stub/client/: TracyScoped.hpp
lib/switch/tracy_stub/common/: TracySystem.hpp
lib/switch/tracy_stub/tracy/: Tracy.hpp
lib/webgpu/: gpu.cpp  gpu_cache.cpp  gpu_cache_null.cpp
